test/bad/functions/void03.px

func f(Void v) def
    return

f()
